--- a/menu.html
+++ b/menu.html
@@ -344,7 +344,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/PolloCroccante_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo Croccante">
     								<h3>Pollo Croccante<span class="price ">13,4</span></h3>
-    								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno, bacon croccante, cipolla in agrodolce, insalata, maionese, pane ciabatta.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
+    								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno con panatura leggermente speziata, bacon croccante, cipolla in agrodolce, insalata, maionese, pane ciabatta.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
