--- a/menu.html
+++ b/menu.html
@@ -494,7 +494,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Blondie_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Blondie">
     								<h3>Blondie<span class="price ">5,5</span></h3>
-    								<p>Brownie con nocciole. Servito con crema al mascarpone.<span class=""><br><small>Allergeni: Frutta a Guscio, Latte, Uova</small></span></p>
+    								<p>Brownie con nocciole. Servito con crema crema pasticcera.<span class=""><br><small>Allergeni: Frutta a Guscio, Latte, Uova</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -503,7 +503,7 @@
                                 <div class="card-section">
                                     <img src="assets/img/prod/Crumble_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Crumble">
                                     <h3>Crumble<span class="price ">6</span></h3>
-                                    <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente.<span class=""><br><small>Allergeni: Latte, Uova</small></span></p>
+                                    <p>Crema pasticcera su croccante crumble di farina di riso, cannella e scaglie di cioccolato fondente.<span class=""><br><small>Allergeni: Latte, Uova</small></span></p>
                                 </div>
                             </div>
                         </div>
