--- a/menu.html
+++ b/menu.html
@@ -202,7 +202,7 @@
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="hamburger" data-magellan-target="hamburger">
     			<div class="small-12 cell">
-    				<h2>Hamburger<small style="line-height: 40px;">Serviti a cottura media e con patate fritte.</small></h2>
+    				<h2>Hamburger<small style="line-height: 40px;">Serviti a cottura media e con patate fritte<br>&#200; possibile sostituire il manzo con pollo ben cotto</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
     						<div class="card">
@@ -428,7 +428,7 @@
     			<div class="small-12 cell">
     				<h2>Secondi</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Entrecote_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Entrecôte">
@@ -436,7 +436,7 @@
     								<p>250 grammi circa di tenerissima Entrecôte (controfiletto) di manzetta Red Hereford irlandese. Servita con insalata.<span class=""><br><small>Allergeni: --</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
