--- a/asporto.html
+++ b/asporto.html
@@ -57,11 +57,10 @@
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
     			<p hidden>Chiusi il lunedì e martedì.</p>
-                <p>Giovedì 5 giugno chiuso per evento privato.</p>
     		</div>
     	</div>
     	<div class="grid-x grid-margin-x">
-    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" hidden>
+    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" -hidden>
     			<p>A che ora vuoi ritirare l'asporto? Ecco gli orari disponibili.<br><small>Puoi selezionare l'orario in ogni momento: anche durante la fase di checkout</small>.</p>
     			<div class="grid-x small-up-4 align-center extra-space">
     			    <div class="cell">
@@ -104,7 +103,7 @@
     		</div>
     	</div>
     </div>
-    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" hidden>
+    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" -hidden>
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
@@ -120,7 +119,7 @@
     	</div>
     </div>
     <div id="menupage-text">
-    	<div class="grid-container" hidden>
+    	<div class="grid-container" -hidden>
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<section class="grid-x grid-margin-x grid-margin-y" id="stuzzicare" data-magellan-target="stuzzicare">
@@ -132,7 +131,7 @@
     				</section>
     				<section class="grid-x grid-margin-x grid-margin-y" id="hamburger" data-magellan-target="hamburger">
     					<div class="small-12 cell">
-    						<h2>Hamburger <span style="display:none;">Classici</span><small style="line-height: 40px;">Serviti a cottura media e con patate fritte<br>&#200; possibile sostituire il manzo con pollo ben cotto</small></h2>
+    						<h2>Hamburger <span style="display:none;">Classici</span><small style="line-height: 40px;">Serviti a cottura media e con patate fritte</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     						</div>
     					</div>
